# ramsey

./: README.md  verify.py
datasets/: RAMSEY_K42_S5_bicirculant_84v.json  RAMSEY_K42_S5_bicirculant_84v_hi_s42.json  RAMSEY_K42_S5_bicirculant_84v_s99.json  RAMSEY_K43_S5_rust_snap_003_v129.json
papers/: ramsey_circulant_v1.tex
rust/ramsey/: Cargo.toml
rust/ramsey/src/: main.rs
scripts/: ramsey_attack.py  ramsey_backtrack.py  ramsey_bipartite_to_irdme.py  ramsey_cayley.py  ramsey_circulant.py  ramsey_hitting_set.py  ramsey_irdme.py  ramsey_local.py  ramsey_orbits_to_irdme.py  ramsey_sat.py  ramsey_symmetry.py  ramsey_to_irdme.py
