[package]
name = "ramsey"
version = "0.1.0"
edition = "2021"

[dependencies]
clap  = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand  = { version = "0.8", features = ["small_rng"] }

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
